--- a/frontend/src/Styles/locations.css
+++ b/frontend/src/Styles/locations.css
@@ -66,7 +66,7 @@
 .iconOptions{
     position: absolute;
     top: 0;
-    right: 0;
+    left: 0;
 }
 .optionsButtons{
     display: flex;
@@ -133,25 +133,4 @@
     background-color: rgb(255, 42, 42);
     cursor: pointer;
 }
-#location-search-container{
-    position: absolute;
-    left: 10px;
-    top: 10%;
 
-    z-index: 51; /*One more than the locations on the page */
-
-    display: flex;
-    flex-direction: column;
-    
-    width: 200px;
-    height: 100%;
-}   
-#location-search{
-    border: 1px solid lightgray;
-    border-radius: 2px;
-    
-
-    width: 100%;
-    height: 60%;
-    min-height: 60%;
-}
