--- a/frontend/src/Styles/searchBar.css
+++ b/frontend/src/Styles/searchBar.css
@@ -16,3 +16,21 @@
     background-color: lightblue;
     cursor: pointer;
 }
+#location-search{
+    border: 1px solid lightgray;
+    border-radius: 2px;
+    width: 100%;
+    height: 100%;
+}
+#location-search-container{
+    z-index: 51; /*One more than the locations on the page */
+
+    display: block;
+
+    width: 300px;
+
+    height: 50%;
+    transform: translateY(50%);
+    margin-right: 1em;
+}
+
