--- a/frontend/src/Styles/searchBar.css
+++ b/frontend/src/Styles/searchBar.css
@@ -16,11 +16,19 @@
     background-color: lightblue;
     cursor: pointer;
 }
+#location-search-input{
+    
+    border: none;
+    width: 100%;
+}
 #location-search{
     border: 1px solid lightgray;
     border-radius: 2px;
     width: 100%;
     height: 100%;
+    display: flex;
+    flex-direction: row;
+    background-color: white;
 }
 #location-search-container{
     z-index: 51; /*One more than the locations on the page */
