--- a/frontend/src/Styles/searchBar.css
+++ b/frontend/src/Styles/searchBar.css
@@ -1,15 +1,19 @@
 .dropdownBorder{
     position: absolute;
-    width: 100%;
+    width: 97.3%;
     height: fit-content;
     
     display: flex;
     flex-direction: column;
     background-color: whitesmoke;
 
+    padding: 4px;
+    padding-bottom: 0;
+
 }
 .dropDownSelection{
-    margin-bottom: 1%;
+    margin-bottom: 4px;
+    border-radius: 4px;
 }
 
 .dropDownSelection:hover{
@@ -23,7 +27,7 @@
 }
 #location-search{
     border: 1px solid lightgray;
-    border-radius: 2px;
+    border-radius: 5px;
     width: 100%;
     height: 100%;
     display: flex;
@@ -42,3 +46,9 @@
     margin-right: 1em;
 }
 
+#label-divider{
+    width: 100%;
+    height: 2px;
+    background-color: lightgray;
+    margin-bottom: 4px;
+}
