--- a/frontend/src/Styles/settings.css
+++ b/frontend/src/Styles/settings.css
@@ -33,7 +33,13 @@
     font-size: 18px;
 
     padding: 2px;
+    
     border-radius: 5px;
+    border-color: #d9d9d9;
+    border-width: 1px;
+    border-style: solid;
+ 
+    margin-bottom: 5px;
 }
 .settings-drop-down-option:hover{
     background-color: lightblue;
