--- a/frontend/src/Styles/app.css
+++ b/frontend/src/Styles/app.css
@@ -89,7 +89,9 @@ body {
 .border {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     border-radius: 5px;
-    border: 1px solid lightgray;
+}
+.border-no-shadow{
+    border-radius: 5px;
 }
 
 #left-positioned-menuBar-elements {
